# cast-launcher

./: .gitignore  LICENSE  README.md  app.vue  error.vue  index.html  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
app/: app.config.ts  app.vue
app/assets/css/: main.css  tailwind.css
app/components/: ActiveDownloadingModal.vue  CreateInstanceModalBody.vue  LoadingScreen.vue
app/components/settings/: Accounts.vue  Java.vue  Launcher.vue
app/layouts/: default.vue  main.vue
app/lib/: ParallelDownloader.ts
app/lib/client/: ClientBase.ts  FabricClient.ts  ForgeClient.ts  VanillaClient.ts
app/lib/installers/: FabricInstaller.ts  ForgeInstaller.ts  InstallerBase.ts  VanillaInstaller.ts
app/middleware/: app.global.ts
app/pages/: index.vue  main.vue  search.vue  settings.vue
app/stores/: account.ts  app.ts  instance.ts
app/types/: account.ts  app.ts  instance.ts  pack.ts
app/utils/: mavenUtils.ts  microsoftUtil.ts  mojangUtils.ts  pkceUtil.ts
assets/css/: dark.css  light.css  tailwind.css
components/: StartingClientDialog.vue  Test.vue  UpdateDialog.vue
components/main/: CreatePackDialog.vue  MainAppbar.vue  MainHeader.vue
components/search/: ModrinthSearch.vue
composables/: useLauncher.ts
layouts/: default.vue  empty.vue
pages/: index.vue  search.vue  settings.vue  test.vue
pages/settings/: index.vue  profiles.vue
pages/zprojects/: index.vue
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  utils.rs
src-tauri/src/commands/: extract.rs  forge.rs  java.rs  microsoft.rs  mod.rs  settings.rs
src-tauri/src/config/: load.rs  mod.rs  save.rs  schema.rs
src-tauri/src/java/: mod.rs
src-tauri/src/minecraft/: cast_pack_json.rs  downloaders.rs  forge.rs  mod.rs  pack_files.rs  settings.rs
src-tauri/src/minecraft/loaders/: fabric.rs  forge.rs  mod.rs  modrinth.rs  vanilla.rs  zapi.rs
src-tauri/src/state/: app_state.rs
